# spectrum-minecraft-launcher-develop

./: README.md  buildui.bat  cfg.json  developer.md  dll_loader.py  loader_api.py  loader_bind_all.py  main.py  make.bat  plugin_manager.py  qt.ui  style.qss  ui.py
C lang dev/: CMakeLists.txt  main.c  spectrum_sdk.c  spectrum_sdk.h
mclauncher_core/: download_funcs.py  java.py  javawrapper.py  launcher_funcs.py  manager.py  manifest_funcs.py  modloader_fabric.py  modloader_forge.py  modloader_neoforge.py  oauth_funcs.py  oauth_server.py  tool_funcs.py
plugins/spectrum_plugin/: CMakeLists.txt  setup.py  spectrum_plugin.c  test.py
plugins/sys info/: main.py
plugins/test/: main.py
spectrum-minecraft-launcher-develop/: README.en.md  README.md
